[gd_scene load_steps=10 format=3 uid="uid://cgb486tmbhcrc"]

[ext_resource type="Texture2D" uid="uid://ccaaq5g4f4vv6" path="res://Sprites/Background.png" id="1_86l4g"]
[ext_resource type="FontVariation" uid="uid://buu8kqux736gm" path="res://Fonts/Game_Font.tres" id="2_18x6o"]
[ext_resource type="FontVariation" uid="uid://b5wirw5h8bo8n" path="res://Fonts/Score_Font.tres" id="3_yv2ai"]
[ext_resource type="Script" path="res://Scripts/Score.gd" id="4_a0g8n"]
[ext_resource type="StyleBox" uid="uid://dpnup4bx50wav" path="res://Styles/Default.tres" id="5_gfcgg"]
[ext_resource type="Texture2D" uid="uid://cu1dyifq4lkgv" path="res://Sprites/reload.png" id="6_e0r40"]
[ext_resource type="Texture2D" uid="uid://c4hrwjcr10ao7" path="res://Sprites/slider.png" id="7_hyfa4"]
[ext_resource type="Texture2D" uid="uid://dwt7i3rlviyvq" path="res://Sprites/home.png" id="8_15wqs"]
[ext_resource type="AudioStream" uid="uid://c86ywhoqukjni" path="res://BGM/music_zapsplat_astro_race.mp3" id="9_sgia0"]

[node name="LoseScreen" type="TextureRect"]
modulate = Color(0.133333, 0.67451, 0.890196, 1)
texture_filter = 2
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_86l4g")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Game Over" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(100, 100, 100, 1)
theme_override_colors/font_outline_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_fonts/font = ExtResource("2_18x6o")
theme_override_font_sizes/font_size = 96
text = "Game over"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Score" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(100, 100, 100, 1)
theme_override_fonts/font = ExtResource("3_yv2ai")
theme_override_font_sizes/font_size = 30
text = "Total Score: "
horizontal_alignment = 1
script = ExtResource("4_a0g8n")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="Retry" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = ExtResource("5_gfcgg")
theme_override_styles/hover = ExtResource("5_gfcgg")
theme_override_styles/pressed = ExtResource("5_gfcgg")
theme_override_styles/disabled = ExtResource("5_gfcgg")
theme_override_styles/focus = ExtResource("5_gfcgg")
icon = ExtResource("6_e0r40")
flat = true
expand_icon = true

[node name="Adjust" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = ExtResource("5_gfcgg")
theme_override_styles/hover = ExtResource("5_gfcgg")
theme_override_styles/pressed = ExtResource("5_gfcgg")
theme_override_styles/disabled = ExtResource("5_gfcgg")
theme_override_styles/focus = ExtResource("5_gfcgg")
icon = ExtResource("7_hyfa4")
flat = true
expand_icon = true

[node name="MainMenu" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = ExtResource("5_gfcgg")
theme_override_styles/hover = ExtResource("5_gfcgg")
theme_override_styles/pressed = ExtResource("5_gfcgg")
theme_override_styles/disabled = ExtResource("5_gfcgg")
theme_override_styles/focus = ExtResource("5_gfcgg")
icon = ExtResource("8_15wqs")
flat = true
expand_icon = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_sgia0")
autoplay = true

[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/Retry" to="MarginContainer/VBoxContainer/Score" method="_on_retry_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/Adjust" to="MarginContainer/VBoxContainer/Score" method="_on_adjust_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/MainMenu" to="MarginContainer/VBoxContainer/Score" method="_on_main_menu_button_down"]
